  * Update VCS fields.
  * Update lintian overrides.
  * Add debian/source/format file.
  * Architectures:
     - Remove LPIA discontinuted.
     - Add x32 (Closes: #775201).
  * Remove libdrm-dev from Build-Depend for Hurd (Closes: #672546).
  * Update debian/watch.
  * Bump Standards-Version to 3.9.8:
     - Remove DM-Upload-Allowed field.
  * Update and convert d/copyright to DEP5.

 -- Dylan Aïssi <bob.dybian@gmail.com>  Thu, 01 Dec 2016 23:17:22 +0100

xserver-xorg-video-openchrome (1:0.3.3+git20160310-1) unstable; urgency=medium

  * New upstream snapshot (Closes: #814682)
  * rules: Enable parallel builds.
  * Install shared libs in multiarch libdir.
  * rules: Add gentarball target

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 10 Mar 2016 15:53:41 +0200

xserver-xorg-video-openchrome (1:0.3.3-2) unstable; urgency=medium

  * control: Drop Julien Viard de Galbert and Cyril Brulebois from
    Uploaders.
  * control: Update homepage.
  * watch: Updated.
  * add-missing-include.diff: Fix build against xserver 1.18.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 09 Feb 2016 16:39:42 +0200

xserver-xorg-video-openchrome (1:0.3.3-1) unstable; urgency=low

  [ Maarten Lankhorst ]
  * Move to git.
  * Remove svn note in README.source
  * Remove README.VCS-source

  [ Timo Aaltonen ]
  * New upstream release. (LP: #1041625)
  * Remove 10-Deal-with-xserver-1.12.diff, not needed anymore.
  * control: Bump policy to 3.9.3, no changes.

  [ Maarten Lankhorst ]
  * New upstream release.

 -- Maarten Lankhorst <maarten.lankhorst@ubuntu.com>  Wed, 25 Sep 2013 16:41:14 +0200

xserver-xorg-video-openchrome (1:0.2.906-1) unstable; urgency=low

  * New upstream release (Closes: #676507).
  * New patch: 10-Deal-with-xserver-1.12.diff (Closes: #675407), with
    thanks to Leon Winter for testing the initial patch and proposing
    a working one.
  * Add xutils-dev build-dep.

 -- Cyril Brulebois <kibi@debian.org>  Fri, 08 Jun 2012 12:49:04 +0000
