@@ -13,6 +13,7 @@ xserver-xorg-video-openchrome (1:0.5.0-1) UNRELEASED; urgency=medium
   * Bump Standards-Version to 3.9.8:
      - Remove DM-Upload-Allowed field.
   * Update and convert d/copyright to DEP5.
+  * Bump debhelper compat to 10.
 
  -- Dylan Aïssi <bob.dybian@gmail.com>  Thu, 01 Dec 2016 23:17:22 +0100
 
